
2004/07/20: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- reverted latest changes to toplevel Makefile.am (contained ugly CR 
  characters. To Christian: Could you please reintroduce your  changes ? 
  Sorry for being rude but I needed Gwen to work and since I did not find a 
  ChangeLog entry I was unable to figure out the difference at a first
  glance...).
- started working on a C++ binding. This will only include function groups
  which are a bit complicated to use from C++ (like GWEN_WaitCallback).


===========================================================================
MARK: released gwenhywfar-0.9.13 (2004/07/05)
===========================================================================


2004/07/04: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/args: GWEN_Args_Check is now able to return a new code which flags
  that the user wanted help. This circumstance is detected by a new flag
  (GWEN_ARGS_FLAGS_HELP).
- crypt/padd: removed usage of a deprecated function (so that the annoying
  warning in OpenHBCI2/AqHBCI vanishes)
- os/gwentime: 
  - added a function that allows to generically parse date and time from a 
    string (guided by a template string)
  - added GWEN_Time_dup()
  - added GWEN_Time_fromSeconds()
- parser/text:
  - added function GWEN_Text_DoubleToBuffer()
  - GWEN_Text_StringToDouble()
- event_l.h was missing, but someone seems to have added in meanwhile.


===========================================================================
MARK: released gwenhywfar-0.9.12 (2004/07/03)
===========================================================================


2004/07/03: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- some more fixes, prepared release


2004/07/02: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- tools: added "dlgtest", a tool which allows testing a dialog.